Adjusted styles and delayed showing of header to avoid a visible style change when the lforms CSS is added

--- a/source/css/app.css
+++ b/source/css/app.css
@@ -4,6 +4,7 @@
 
 body {
   padding: 15px;
+  margin: 0;
 }
 
 /* Styles for the header */
@@ -16,13 +17,15 @@ body {
   line-height: normal;
   padding-bottom: 10px;
   margin: 5px;
+  display: none; /* until lforms CSS is loaded */
 }
 #siteNameBox {
   margin-top: 15px;
   margin-bottom: 5px;
 }
 #siteName {
-  font-size: 160%;
+  font-size: 1.6em;
+  font-weight: 500;
   margin-top: 5px;
   margin-bottom: 0;
 }
